div alignment issue and add close button to close child div.

--- a/oracle/gls/static/css/gla.css
+++ b/oracle/gls/static/css/gla.css
@@ -8,10 +8,12 @@ tooltip {
 		}
 			
 		.myClass1 {
-			padding: 50px;border: 3px solid green;
+			border: 3px solid green;
 			margin-bottom: 50px;cursor: pointer;
 			float: left;width: 20%;
-			height: 15%
+			margin-left: 2%;
+			height: 80px;
+			padding:40px;
 		}
 		.myClass1:hover{
 						opacity: .7;background: rgba(0,0,0,0);
@@ -20,24 +22,25 @@ tooltip {
 		}
 
 		.myClass2 {
-				padding: 50px;border: 3px solid red;
+				border: 3px solid red;
 				display: inline-block;
-				float:right;
-				cursor: pointer;margin-left: 0%;width: 20%;height: 15%;
+				float:left;
+				cursor: pointer;margin-left: 2%;width: 20%;height: 80px;
 				font-size:14px;
-		}
+				padding:40px;
+		}2
 		.myClass2:hover{
 					opacity: .7;background: rgba(0,0,0,0);
 					color: #3a7999;
 					box-shadow: inset 0 0 0 3px #3a7999;
 		}
 		.myClass3 {
-			padding: 50px;border: 3px solid blue;display: inline-block;cursor: pointer;float: right;
-			margin-right: 6%;height: 15%;width:23%;
+			border: 3px solid blue;display: inline-block;cursor: pointer;float: left;
+			margin-left: 2%;height: 80px;width:20%;padding:40px;
 		}
 		.myClass4 {
-			padding: 50px;border: 3px solid yellow;display: inline-block;cursor: pointer;float: right;
-			margin-right: 34%;margin-top:2%;height: 15%;width:23%;
+			padding: 40px;border: 3px solid yellow;display: inline-block;cursor: pointer;float: left;
+			margin-left: 2%;margin-top:2%;height: 80;width:20%;
 		}
 		.myClass3:hover{
 			opacity: .7;background: rgba(0,0,0,0);
